--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,97 @@
+absl-py==2.1.0
+asttokens==2.4.1
+astunparse==1.6.3
+backcall==0.2.0
+blinker==1.7.0
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+comm==0.2.1
+contourpy==1.1.1
+cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
+executing==2.0.1
+Flask==3.0.2
+flatbuffers==1.12
+fonttools==4.49.0
+gast==0.4.0
+google-auth==2.28.2
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.62.1
+h5py==3.10.0
+hdf5storage==0.1.19
+idna==3.6
+importlib_metadata==7.0.2
+importlib_resources==6.1.3
+imutils==0.5.4
+ipykernel==6.29.3
+ipython==8.12.3
+itsdangerous==2.1.2
+jedi==0.19.1
+Jinja2==3.1.3
+joblib==1.3.2
+jupyter_client==8.6.0
+jupyter_core==5.7.1
 keras==2.9.0
+Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
+kiwisolver==1.4.5
+libclang==16.0.6
+Markdown==3.5.2
+MarkupSafe==2.1.5
+matplotlib==3.7.5
+matplotlib-inline==0.1.6
+nest-asyncio==1.6.0
+numpy==1.24.4
+oauthlib==3.2.2
+opencv-python==4.9.0.80
+opt-einsum==3.3.0
+packaging==24.0
+pandas==2.0.3
+parso==0.8.3
+pexpect==4.9.0
+pickleshare==0.7.5
+pillow==10.2.0
+platformdirs==4.2.0
+prompt-toolkit==3.0.43
+protobuf==3.19.6
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+Pygments==2.17.2
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
+pyzmq==25.1.2
+requests==2.31.0
+requests-oauthlib==1.4.0
+rsa==4.9
+scikit-learn==1.3.2
+scipy==1.10.1
+seaborn==0.13.2
+six==1.16.0
+split-folders==0.5.1
+stack-data==0.6.3
+tensorboard==2.9.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
 tensorflow==2.9.0
 tensorflow-estimator==2.9.0
 tensorflow-io-gcs-filesystem==0.34.0
-scikit-learn==1.3.2
-seaborn==0.13.0
-tqdm==4.66.1
-matplotlib==3.7.4
-opencv-python==4.8.1.78
+termcolor==2.4.0
+threadpoolctl==3.3.0
+tornado==6.4
+tqdm==4.66.2
+traitlets==5.14.1
+typing_extensions==4.10.0
+tzdata==2024.1
+urllib3==2.2.1
+wcwidth==0.2.13
+Werkzeug==3.0.1
+wrapt==1.16.0
+zipp==3.17.0
